--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,4 +12,4 @@ jobs:
     - name: Build
       run: cargo build --verbose
     - name: Run tests
-      run: sudo apt-get install -y libsdl2-dev libsdl2-image-dev && cargo test --verbose
+      run: sudo apt-get update && sudo apt-get install -y libsdl2-dev libsdl2-image-dev && cargo test --verbose
